--- a/for_scr.html
+++ b/for_scr.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
 <!--    <script src="script.js"></script>-->
-    <script src="learn_js.js"></script>
+<!--    <script src="learn_js.js"></script>-->
 <!--    <script src="zadachi.js"></script>-->
+    <script src="object.js"></script>
     <title>script</title>
 </head>
 <body>
